--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <title>FEC Proxy Server Template</title>
 </head>
 <body id="truliaImageCentering">
-  <!-- <div id="gallery"></div>
+  <div id="gallery"></div>
   <div class=“trulia”>
     <img src='https://pictures-fec.s3-us-west-1.amazonaws.com/homeDetails-1.png'>
     <img src='https://pictures-fec.s3-us-west-1.amazonaws.com/priceInfo.png'>
@@ -19,13 +19,13 @@
   <div id="reviews"></div>
   <div class=“trulia”>
     <img src='https://pictures-fec.s3-us-west-1.amazonaws.com/LGBT.png'>
-  </div> -->
+  </div>
   <div id="mortgage"></div>
-  <!-- <div class=“trulia”>
+  <div class=“trulia”>
     <img src='https://pictures-fec.s3-us-west-1.amazonaws.com/agents.png'>
     <img src='https://pictures-fec.s3-us-west-1.amazonaws.com/bottom.png'>
   </div>
-  <script src="https://s3-us-west-1.amazonaws.com/hackreactor.fec.trulia.photos/bundle.js"></script>
+  <!-- <script src="https://s3-us-west-1.amazonaws.com/hackreactor.fec.trulia.photos/bundle.js"></script>
   <script src="https://s3-us-west-1.amazonaws.com/fec.similarhomes/bundle.js"></script>
   <script src="https://reviews-component-fec.s3-us-west-1.amazonaws.com/bundle.js"></script> -->
   <script src="/bundles/service4.js"></script>
